// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeedbackForm /> renders if user is no satisfied 1`] = `
.c3 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c1 {
  margin-bottom: 1.25rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 1.25rem;
}

<div>
  <form
    action="https://formspree.io/xbalrgzm"
    class="c0"
  >
    <p>
      <strong>
        Merci pour votre réponse !
      </strong>
    </p>
    <p>
      Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
    </p>
    <input
      name="question"
      type="hidden"
      value="Initial query"
    />
    <input
      name="url"
      type="hidden"
      value="led zeppelin"
    />
    <input
      name="sourceType"
      type="hidden"
      value="Fiches Service Public"
    />
    <select
      class="c1"
      name="motif"
    >
      <option
        value="Les informations proposées ne sont pas à jour"
      >
        Les informations proposées ne sont pas à jour
      </option>
      <option
        value="Les informations me paraissent erronées"
      >
        Les informations me paraissent erronées
      </option>
      <option
        value="Les informations me paraissent incomplètes"
      >
        Les informations me paraissent incomplètes
      </option>
      <option
        value="Les informations me paraissent hors-sujet"
      >
        Les informations me paraissent hors-sujet
      </option>
      <option
        value="Je n'ai pas trouvé la réponse à ma question"
      >
        Je n'ai pas trouvé la réponse à ma question
      </option>
    </select>
    <textarea
      class="c1"
      name="message"
      placeholder="Les informations ..."
    />
    <div
      class="c2"
    >
      <button
        class="c3"
      >
        Envoyer mon commentaire
      </button>
      <div
        class="c4"
      />
    </div>
  </form>
</div>
`;

exports[`<FeedbackForm /> renders if user is satisfied 1`] = `
.c3 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c1 {
  margin-bottom: 1.25rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 1.25rem;
}

<div>
  <form
    action="https://formspree.io/xbalrgzm"
    class="c0"
  >
    <p>
      <strong>
        Merci pour votre réponse !
      </strong>
    </p>
    <p>
      Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
    </p>
    <input
      name="question"
      type="hidden"
      value="Initial query"
    />
    <input
      name="url"
      type="hidden"
      value="led zeppelin"
    />
    <input
      name="sourceType"
      type="hidden"
      value="Fiches Service Public"
    />
    <textarea
      class="c1"
      name="message"
      placeholder="Les informations ..."
    />
    <div
      class="c2"
    >
      <button
        class="c3"
      >
        Envoyer mon commentaire
      </button>
      <div
        class="c4"
      />
    </div>
  </form>
</div>
`;
